# Misty_interaction

./: .gitignore  README.md
misty_interaction/: package.xml  setup.cfg  setup.py
misty_interaction/launch/: misty_launch.py
misty_interaction/misty_interaction/: GeneralMistyTemp.py  MicInputNode.py  SendToMisty.py  TTSNode.py  TextInputNode.py  gtts_tts_node.py
misty_interaction_interfaces/: CMakeLists.txt  package.xml
misty_interaction_interfaces/msg/: AudioData.msg
misty_interaction_interfaces/srv/: SaveMode.srv  SubmitText.srv
