<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>misty_interaction</name>
  <version>0.1.0</version>

  <description>
    Interactive text- and speech-I/O nodes for the Misty II research project.
  </description>

  <maintainer email="contrant@oregonstate.edu">Anthony Contreras</maintainer>
  <license>BSD-3-Clause</license>

  <!-- build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime / build dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>misty_interaction_interfaces</depend>

  <exec_depend>coqui-tts</exec_depend>
  <exec_depend>soundfile</exec_depend>
  <exec_depend>pydub</exec_depend>
  
  <!-- optional test deps -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>python3-TTS</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
