<package format="3">
  <name>misty_interaction_interfaces</name>
  <version>0.1.0</version>
  <description>Custom service definitions for the Misty interaction stack.</description>

  <maintainer email="contrant@oregonstate.edu">Anthony Contreras</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>


  <export>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
